add: script to call create-dontation function based on event listener for date

--- a/profiles/templates/profiles/profile.html
+++ b/profiles/templates/profiles/profile.html
@@ -51,6 +51,7 @@
     {{ stripe_public_key|json_script:"id_stripe_public_key" }}
     {{ client_secret|json_script:"id_client_secret" }}
     <script>
+        // controls which tab on profiles page displays
         $(document).ready(function() {
             var activeTab = "{{ active_tab }}";
             if (activeTab) {
@@ -66,4 +67,5 @@
         });
     </script>
     <script src="{% static 'profiles/js/stripe_elements.js' %}"></script>
+    <script src="{% static 'profiles/js/automate_create_donation.js' %}"></script>
 {% endblock %}
