--- a/templates/base.html
+++ b/templates/base.html
@@ -38,7 +38,7 @@
 	<body>
 		<header class="container-fluid fixed-top m-0 p-0">
 		<!-- main nav bar -->
-		<nav class="row navbar navbar-expand-md shadow-sm bg-light-brand m-0 pl-3 pr-4">
+		<nav class="row navbar navbar-expand-md shadow-sm bg-light-brand m-0 pl-3">
 			<!-- logo -->
 			<a href="{% url 'home' %}" aria-label="link to home page"
 				class="col-8 col-md-4 my-auto main-logo nav-link" >
@@ -71,28 +71,32 @@
 				</a>
 				<div class="dropdown-menu dropdown-menu-right shadow bold" aria-labelledby="user-options">
 					{% if request.user.is_authenticated %}
-					<a href="{% url 'profiles:profile' %}?tab=myDonofy" aria-label="link to my my donofy page"
-						class="dropdown-item drop-item-h text-pink bold hover-float">My Donofy
-					</a>
-					<a href="{% url 'profiles:profile' %}?tab=myImpact" aria-label="link to my impact page"
-						class="dropdown-item drop-item-h text-pink bold hover-float">My Impact
-					</a>
-					<a href="{% url 'profiles:profile' %}?tab=myDetails" aria-label="link to my details page"
-						class="dropdown-item drop-item-h text-pink bold hover-float">My Details
-					</a>
-					<a href="{% url 'profiles:profile' %}?tab=myHistory" aria-label="link to my payments page"
-						class="dropdown-item drop-item-h text-pink bold hover-float">My Payments
-					</a>
-					<a href="{% url 'account_logout' %}" aria-label="link to logout page"
-						class="dropdown-item drop-item-h text-pink bold">Logout
-					</a>
-					{% else %}
-					<a href="{% url 'account_signup' %}" aria-label="link to register page"
-						class="dropdown-item drop-item-h text-pink bold">Register
-					</a>
-					<a href="{% url 'account_login' %}" aria-label="link to log in page"
-						class="dropdown-item drop-item-h text-pink bold">Login
-					</a>
+						{% if request.user.is_superuser %}
+							<a href="{% url 'staff_action' %}" aria-label="link to admin page"
+								class="dropdown-item drop-item-h text-pink bold hover-float">Admin</a>
+						{% endif %}
+						<a href="{% url 'profiles:profile' %}?tab=myDonofy" aria-label="link to my donofy page"
+							class="dropdown-item drop-item-h text-pink bold hover-float">My Donofy
+						</a>
+						<a href="{% url 'profiles:profile' %}?tab=myImpact" aria-label="link to my impact page"
+							class="dropdown-item drop-item-h text-pink bold hover-float">My Impact
+						</a>
+						<a href="{% url 'profiles:profile' %}?tab=myDetails" aria-label="link to my details page"
+							class="dropdown-item drop-item-h text-pink bold hover-float">My Details
+						</a>
+						<a href="{% url 'profiles:profile' %}?tab=myHistory" aria-label="link to my payments page"
+							class="dropdown-item drop-item-h text-pink bold hover-float">My Payments
+						</a>
+						<a href="{% url 'account_logout' %}" aria-label="link to logout page"
+							class="dropdown-item drop-item-h text-pink bold">Logout
+						</a>
+						{% else %}
+						<a href="{% url 'account_signup' %}" aria-label="link to register page"
+							class="dropdown-item drop-item-h text-pink bold">Register
+						</a>
+						<a href="{% url 'account_login' %}" aria-label="link to log in page"
+							class="dropdown-item drop-item-h text-pink bold">Login
+						</a>
 					{% endif %}
 				</div>
 				</li>
