--- a/profiles/templates/profiles/includes/my-details.html
+++ b/profiles/templates/profiles/includes/my-details.html
@@ -5,14 +5,19 @@
         {% csrf_token %}
         {{ user_form|crispy }}
         {{ user_profile_form|crispy }}
-            <label class="fieldset-label text-pink px-2 w-auto">Payment</label>
-            <!-- A Stripe card element will go here -->
-            <div class="mb-3" id="card-element"></div>
-            <!-- Used to display form errors -->
-            <div class="mb-3 text-danger" id="card-errors" role="alert"></div>
-            <!-- Pass the client secret to the view so we can get the payment intent id -->
-            <input type="hidden" value="{{ client_secret }}" name="client_secret">
         <button type="submit" class="btn btn-lg btn-pink shadow col-12 col-md-5 my-3">Save Changes</button>
+    </form>
+    <form id="payment-form" action="" method="POST" class="col-12 col-lg-8 mx-auto mb-5">
+        {% csrf_token %}
+        {{ form|crispy }}
+        <label class="fieldset-label text-pink px-2 w-auto">Payment</label>
+        <!-- A Stripe card element will go here -->
+        <div class="mb-3" id="card-element"></div>
+        <!-- Used to display form errors -->
+        <div class="mb-3 text-danger" id="card-errors" role="alert"></div>
+        <!-- Pass the client secret to the view so we can get the payment intent id -->
+        <input type="hidden" value="{{ client_secret }}" name="client_secret">
+        <button type="submit" class="btn btn-lg btn-pink shadow col-12 col-md-5 my-3">Save Card</button>
         <p class="text-dark my-0"><i class="icon fas fa-exclamation-circle"></i> Please ensure all billing information is correct.</p>
         <p class="text-dark mb-0">Your donation will be taken on the 1st of every month whilst your subscription is active.</p>
         <p class="text-dark mb-0">To edit, or pause your subscription, please go to Manage My Donofy</p>
