chore: changes notifications that payments will be taken on the last day of every month instead of the 1st of the following month

--- a/home/templates/home/staff-action.html
+++ b/home/templates/home/staff-action.html
@@ -22,7 +22,7 @@
             </a>
         </div>
         <div class="row mx-2">
-            <p class="col-12 col-lg-8 mx-auto text-dark bold text-center mb-0">Donation payments should be actioned on the 1st of every month.</p>
+            <p class="col-12 col-lg-8 mx-auto text-dark bold text-center mb-0">Donation payments should be actioned on the last day of every month.</p>
             <a href="#" aria-label="Generate Donation action button"
                 class="btn btn-lg btn-pink col-12 col-sm-8 col-xl-6 mx-auto mb-1">Action Donation Payments
             </a>
