--- a/profiles/templates/profiles/includes/my-details.html
+++ b/profiles/templates/profiles/includes/my-details.html
@@ -19,7 +19,7 @@
         <input type="hidden" value="{{ client_secret }}" name="client_secret">
         <button type="submit" class="btn btn-lg btn-pink shadow col-12 col-md-5 my-3">Save Card</button>
         <p class="text-dark my-0"><i class="icon fas fa-exclamation-circle"></i> Please ensure all billing information is correct.</p>
-        <p class="text-dark mb-0">Your donation will be taken on the 1st of every month whilst your subscription is active.</p>
+        <p class="text-dark mb-0">Your donation will be taken on the last day of every month whilst your subscription is active.</p>
         <p class="text-dark mb-0">To edit, or pause your subscription, please go to Manage My Donofy</p>
     </form>
 </div>
