--- a/profiles/templates/profiles/includes/my-donofy.html
+++ b/profiles/templates/profiles/includes/my-donofy.html
@@ -4,7 +4,7 @@
     {% if subscription.sub_active %}
         <!-- displays to the user if their subscription is active or not, and give them an option to toggle this -->
         <h2 class="text-pink bold col-12 col-lg-8 mx-auto px-1"><i id="icon-green" class="fa-solid fa-check-circle icon-green"></i> Your Donations are Active </h2>
-        <p class="text-muted col-12 col-lg-8 mx-auto px-1">You will donate on the 1st of every month, according to your settings below.</p>
+        <p class="text-muted col-12 col-lg-8 mx-auto px-1">You will donate on the last day of every month, according to your settings below.</p>
         <form action="{% url 'subscriptions:toggle_subscription_active' %}" method="POST" class="col-12 col-lg-8 mx-auto p-0 mt-2 mb-4">
             {% csrf_token %}
             <button type="submit" class="btn btn-lg btn-pink-outline col-12 col-md-6 shadow">Pause Donations</button>
