--- a/profiles/templates/profiles/includes/my-details.html
+++ b/profiles/templates/profiles/includes/my-details.html
@@ -17,9 +17,16 @@
         <div class="mb-3 text-danger" id="card-errors" role="alert"></div>
         <!-- Pass the client secret to the view so we can get the payment intent id -->
         <input type="hidden" value="{{ client_secret }}" name="client_secret">
+        <div class="form-check">
+            <input class="form-check-input" type="checkbox" name="consent" value="consent" id="consent" required>
+            <label class="form-check-label" for="consent">
+                I give Donofy permission to process payments in accordance with my specified donation settings.
+            </label>
+        </div>
         <button type="submit" class="btn btn-lg btn-pink shadow col-12 col-md-5 my-3">Save Card</button>
         <p class="text-dark my-0"><i class="icon fas fa-exclamation-circle"></i> Please ensure all billing information is correct.</p>
         <p class="text-dark mb-0">Your donation will be taken on the last day of every month whilst your subscription is active.</p>
         <p class="text-dark mb-0">To edit, or pause your subscription, please go to Manage My Donofy</p>
     </form>
 </div>
+
