--- a/static/css/base.css
+++ b/static/css/base.css
@@ -10,7 +10,7 @@ html {
 
 body {
     padding: 0;
-    margin-top: 80px;
+    margin-top: 150px;
     height: calc(100vh - 60px);
     color: #222;
     background-color: #f6f6f6;
@@ -325,4 +325,10 @@ i.icon-lg {
     font-size: 1.2rem;
     font-weight: 600;
     padding-left: 4.7rem;
+}
+
+@media screen and (min-width: 320px) and (max-width: 575px) {
+    body {
+        margin-top: 90px;
+    }
 }
