--- a/profiles/static/profiles/css/profiles.css
+++ b/profiles/static/profiles/css/profiles.css
@@ -4,6 +4,11 @@ h1.profile-title,
     line-height: 1.5rem;
 }
 
+.profile-sub-title {
+    font-size: 1.3rem;
+    line-height: 1.3rem;
+}
+
 .profile-tabs {
     height: 3rem;
     background-color: #f6f6f6;
@@ -28,7 +33,7 @@ h1.profile-title,
     list-style-type: none;
 }
 
-#icon-green {
+.icon-green {
     padding: 0;
     margin: 0;
     color: #3C8E2E!important;
@@ -81,7 +86,8 @@ h1.profile-title,
 
 @media screen and (min-width: 320px) and (max-width: 575px) {
     h1.profile-title,
-    .your-total {
+    .your-total,
+    .profile-sub-title {
         font-size: 1.2rem;
         line-height: 1.2rem;
     }
