chore: corrects path name

--- a/home/templates/home/staff-action.html
+++ b/home/templates/home/staff-action.html
@@ -17,7 +17,7 @@
         </div>
         <div class="row mx-2">
             <p class="col-12 col-lg-8 mx-auto text-dark bold text-center mb-0">Generate Donations action should be taken on the 24th of every month.</p>
-            <a href="{% url 'subscriptions:create_donation_if_24th' %}" aria-label="Generate Donation action button"
+            <a href="{% url 'subscriptions:create_donation' %}" aria-label="Generate Donation action button"
                 class="btn btn-lg btn-pink col-12 col-sm-8 col-xl-6 mx-auto mb-5">Generate Donations
             </a>
         </div>
