--- a/profiles/static/profiles/css/profiles.css
+++ b/profiles/static/profiles/css/profiles.css
@@ -78,7 +78,7 @@ h1.profile-title,
     right: .5rem;
 }
 
-#payment-form .form-control,
+#setup-form .form-control,
 #card-element {
     color: #000;
     border: 1px solid #ced4da;
