--- a/profiles/templates/profiles/includes/my-details.html
+++ b/profiles/templates/profiles/includes/my-details.html
@@ -1,14 +1,10 @@
 <h2 class="tab-title text-pink bold col-12 col-lg-8 mx-auto px-1">Review / edit your billing details here.</h2>
 <p class="text-dark col-12 col-lg-8 mx-auto px-1">( Full profile info is required to have an active donation subscription. )</p>
 <div class="row">
-    <form action="{% url 'profiles:update_profile' %}" method="POST" class="profile-forms col-12 col-lg-8 mx-auto mb-5">
+    <form id="setup-form" action="{% url 'profiles:save_card' %}" method="POST" class="profile-forms col-12 col-lg-8 mx-auto mb-5">
         {% csrf_token %}
         {{ user_form|crispy }}
         {{ user_profile_form|crispy }}
-        <button type="submit" class="btn btn-lg btn-pink shadow col-12 col-md-5 my-3">Save Changes</button>
-    </form>
-    <form id="payment-form" action="{% url 'profiles:save_card' %}" method="POST" class="col-12 col-lg-8 mx-auto mb-5">
-        {% csrf_token %}
         {{ form|crispy }}
         <label class="fieldset-label text-pink px-2 w-auto">Payment</label>
         <!-- A Stripe card element will go here -->
@@ -23,10 +19,8 @@
                 I give Donofy permission to process payments in accordance with my specified donation settings.
             </label>
         </div>
-        <button type="submit" class="btn btn-lg btn-pink shadow col-12 col-md-5 my-3">Save Card</button>
+        <button type="submit" class="btn btn-lg btn-pink shadow col-12 col-md-5 my-3">Save Billing Details</button>
         <p class="text-dark my-0"><i class="icon fas fa-exclamation-circle"></i> Please ensure all billing information is correct.</p>
-        <p class="text-dark mb-0">Your donation will be taken on the last day of every month whilst your subscription is active.</p>
-        <p class="text-dark mb-0">To edit, or pause your subscription, please go to Manage My Donofy</p>
     </form>
 </div>
 
