--- a/templates/base.html
+++ b/templates/base.html
@@ -78,11 +78,8 @@
 						<a href="{% url 'profiles:profile' %}?tab=myDonofy" aria-label="link to my donofy page"
 							class="dropdown-item drop-item-h text-pink bold hover-float">My Donofy
 						</a>
-						<a href="{% url 'profiles:profile' %}?tab=myImpact" aria-label="link to my impact page"
-							class="dropdown-item drop-item-h text-pink bold hover-float">My Impact
-						</a>
-						<a href="{% url 'profiles:profile' %}?tab=myDetails" aria-label="link to my details page"
-							class="dropdown-item drop-item-h text-pink bold hover-float">My Details
+						<a href="{% url 'checkout' %}" aria-label="link to donate page"
+							class="dropdown-item drop-item-h text-pink bold hover-float">Donate
 						</a>
 						<a href="{% url 'profiles:profile' %}?tab=myHistory" aria-label="link to my payments page"
 							class="dropdown-item drop-item-h text-pink bold hover-float">My Payments
