chore: chages my payments to my history

--- a/templates/base.html
+++ b/templates/base.html
@@ -82,7 +82,7 @@
 							class="dropdown-item drop-item-h text-pink bold hover-float">Donate
 						</a>
 						<a href="{% url 'profiles:profile' %}?tab=myHistory" aria-label="link to my payments page"
-							class="dropdown-item drop-item-h text-pink bold hover-float">My Payments
+							class="dropdown-item drop-item-h text-pink bold hover-float">My History
 						</a>
 						<a href="{% url 'account_logout' %}" aria-label="link to logout page"
 							class="dropdown-item drop-item-h text-pink bold">Logout
