--- a/profiles/templates/profiles/includes/my-history.html
+++ b/profiles/templates/profiles/includes/my-history.html
@@ -1,3 +1,3 @@
-<h2 class="tab-title bold">My Payment History</h2>
+<h2 class="tab-title bold">My Donation History</h2>
 
 <!-- loop through payment history data -->
