--- a/profiles/templates/profiles/includes/my-donofy.html
+++ b/profiles/templates/profiles/includes/my-donofy.html
@@ -3,7 +3,7 @@
     <h2 class="your-total bg-white text-pink bold col-12 col-lg-8 mx-auto mb-0 mt-3 py-2 px-1 text-center">Your current donation total = £{{ subscription.sub_total }}</h2>
     <!-- lists the users favourited charities. Functionality to remove charities, or adjust donation amounts -->
     <h2 class="tab-title text-capitalize text-white bg-pink bold col-12 col-lg-8 pl-2 py-2 mx-auto px-1">Your Favourited Charities ({{ charity_favs|length }})</h2>
-    <form action="{% url 'subscriptions:update_subscription' %}" method="POST" class="col-12 col-lg-8 mx-auto mb-5">
+    <form action="{% url 'profiles:update_subscription' %}" method="POST" class="col-12 col-lg-8 mx-auto mb-5">
         {% csrf_token %}
         <ul class="favourites-list p-0">
             <p class="text-dark mb-0">
@@ -17,7 +17,7 @@
                     <a href="{% url 'charity_detail' charity.id %}" aria-label="link to charity page"
                                 class="text-dark bold">{{ charity.charity_name }}</a>
                     <p class="text-small text-muted mb-0">Charity number: ({{ charity.charity_num}})</p>
-                    <a href="{% url 'subscriptions:delete_from_favs' charity.id %}" aria-label="action to remove charity from favourites list"
+                    <a href="{% url 'profiles:delete_from_favs' charity.id %}" aria-label="action to remove charity from favourites list"
                         class="a-pink">
                         Remove from favourites
                     </a>
