--- a/checkout/templates/checkout/checkout.html
+++ b/checkout/templates/checkout/checkout.html
@@ -13,7 +13,7 @@
                 {% csrf_token %}
                 <label for="name">Full name</label>
                 <input type="text">
-                {{ user_profile_form|crispy }}
+                {{ DonationForm|crispy }}
                 {{ form|crispy }}
                 <label class="fieldset-label text-pink px-2 w-auto">Payment</label>
                 <!-- A Stripe card element will go here -->
