--- a/checkout/templates/checkout/checkout.html
+++ b/checkout/templates/checkout/checkout.html
@@ -16,7 +16,7 @@
                 <h2 class="checkout-sub-title text-pink">Your donation summary</h2>
                 <p class="text-dark mb-1">Your current donation total = £{{ subscription.sub_total }}</p>
                 <p class="text-dark mb-1">Which you've chosen to divide as follows:</p>
-                {% for key, value in donation_breakdown.items %}
+                {% for key, value in subscription_breakdown.items %}
                     <ul class="pl-2 mb-1">
                         <li>
                             <strong>£{{ value }}</strong> to {{ key }}
@@ -37,14 +37,14 @@
                 <fieldset class="rounded px-3 mb-5">
                     <legend class="fieldset-label small text-pink px-2 w-auto">Billing Address</legend>
                     {{ donation_form.phone_number | as_crispy_field }}
-                    {{ donation_form.country | as_crispy_field }}
                     {{ donation_form.postcode | as_crispy_field }}
                     {{ donation_form.town_or_city | as_crispy_field }}
                     {{ donation_form.street_address1 | as_crispy_field }}
                     {{ donation_form.street_address2 | as_crispy_field }}
                     {{ donation_form.county | as_crispy_field }}
+                    {{ donation_form.country | as_crispy_field }}
                     <div class="form-check form-check-inline float-right mr-0">
-                        <label class="form-check-label" for="id-save-info">Save this information to my profile</label>
+                        <label class="form-check-label" for="id-save-info">Save this delivery information to my profile</label>
                         <input class="form-check-input ml-2 mr-0" type="checkbox" id="id-save-info" name="save-info" checked>
                     </div>
                 </fieldset>
@@ -55,7 +55,7 @@
                     <!-- Used to display form errors -->
                     <div class="mb-5 text-danger" id="card-errors" role="alert"></div>
                     <!-- Pass the client secret to the view so we can get the payment intent id -->
-                    <input type="hidden" value="{{ client_secret }}" name="client_secret">
+                    <input type="hidden" value="{{ client_secret }}" id="id_client_secret">
                 
                 <p class="text-dark">
                     If you need to change this amount, or any of your donation details, please go to the
@@ -72,5 +72,8 @@
     {{ block.super }}
     {{ stripe_public_key|json_script:"id_stripe_public_key" }}
     {{ client_secret|json_script:"id_client_secret" }}
+    <script>
+        console.log("Client secret in template:", {{ client_secret|escapejs }});
+    </script>
     <script src="{% static 'checkout/js/stripe_elements.js' %}"></script>
 {% endblock %}
