--- a/profiles/templates/profiles/profile.html
+++ b/profiles/templates/profiles/profile.html
@@ -20,6 +20,7 @@
         <nav>
             <div class="nav nav-tabs flex-column flex-md-row" id="nav-tab" role="tablist">
                 <button class="nav-link flex-md-fill text-md-center profile-tabs shadow text-pink hover-float bold active" id="myDonofy-tab" data-toggle="tab" data-target="#nav-myDonofy" type="button" role="tab" aria-controls="nav-manage" aria-selected="true">Manage My Donofy</button>
+                <button class="nav-link flex-md-fill text-md-center profile-tabs shadow text-pink hover-float bold" id="myDetails-tab" data-toggle="tab" data-target="#nav-myDetails" type="button" role="tab" aria-controls="nav-details" aria-selected="true">My Details</button>
                 <button class="nav-link flex-md-fill text-md-center profile-tabs shadow text-pink hover-float bold" id="nav-myHistory-tab" data-toggle="tab" data-target="#nav-myHistory" type="button" role="tab" aria-controls="nav-history" aria-selected="false">My Payment History</button>
             </div>
         </nav>
@@ -27,6 +28,10 @@
             <!-- manage my donofy pane -->
             <div class="tab-pane fade show active{% if active_tab == 'myDonofy' %}show active{% endif %}" id="nav-myDonofy" role="tabpanel" aria-labelledby="nav-manage-tab">
                 {% include 'profiles/includes/my-donofy.html' %}
+            </div>
+            <!-- my details pane -->
+            <div class="tab-pane fade show active{% if active_tab == 'myDetails' %}show active{% endif %}" id="nav-myDetails" role="tabpanel" aria-labelledby="nav-details-tab">
+                {% include 'profiles/includes/my-details.html' %}
             </div>
             <!-- payment history pane -->
             <div class="tab-pane fade {% if active_tab == 'myHistory' %}show active{% endif %}" id="nav-myHistory" role="tabpanel" aria-labelledby="nav-history-tab">
