--- a/profiles/templates/profiles/profile.html
+++ b/profiles/templates/profiles/profile.html
@@ -26,11 +26,11 @@
         </nav>
         <div class="tab-content shadow p-4 mb-5" id="nav-tabContent">
             <!-- manage my donofy pane -->
-            <div class="tab-pane fade show active{% if active_tab == 'myDonofy' %}show active{% endif %}" id="nav-myDonofy" role="tabpanel" aria-labelledby="nav-manage-tab">
+            <div class="tab-pane fade {% if active_tab == 'myDonofy' %}show active{% endif %}" id="nav-myDonofy" role="tabpanel" aria-labelledby="nav-manage-tab">
                 {% include 'profiles/includes/my-donofy.html' %}
             </div>
             <!-- my details pane -->
-            <div class="tab-pane fade show active{% if active_tab == 'myDetails' %}show active{% endif %}" id="nav-myDetails" role="tabpanel" aria-labelledby="nav-details-tab">
+            <div class="tab-pane fade {% if active_tab == 'myDetails' %}show active{% endif %}" id="nav-myDetails" role="tabpanel" aria-labelledby="nav-details-tab">
                 {% include 'profiles/includes/my-details.html' %}
             </div>
             <!-- payment history pane -->
