chore: centers the accounts templates

--- a/templates/allauth/account/base.html
+++ b/templates/allauth/account/base.html
@@ -8,7 +8,7 @@
 {% block content %}
   <div class="container-fluid bg-light-brand">
     <div class="row">
-      <div class="col-12 col-lg-8">
+      <div class="col-12 col-lg-5 mx-auto mb-5">
         <div>
           {% block inner_content %}
           {% endblock %}
