chore:  changes billing_success.html filename for consistancy

--- a/checkout/templates/checkout/billing_success.html
+++ b/checkout/templates/checkout/billing_success.html
@@ -13,11 +13,19 @@
         <div class="row">
             <div class="col-12 col-lg-10 mx-auto">
                 <h1 class="text-pink bold profile-title text-center text-capitalize mt-3 mt-lg-5">
-                    <span><i class="fa-solid fa-circle-check icon-green"></i></span> Doantion successful.
+                    <span><i class="fa-solid fa-circle-check icon-green"></i></span> Donation successful.
                 </h1>
                 <h2 class="text-dark profile-title text-center mb-5">
                     Thank you, you awesome human!
                 </h2>
+                <p class="text-dark">Your donation information is below. A confirmation email will be sent to <strong>{{ donation.email }}</strong>.</p>
+                {% for key, value in donation_breakdown.items %}
+                    <ul class="pl-2 mb-1">
+                        <li>
+                            <strong>£{{ value }}</strong> to {{ key }}
+                        </li>
+                    </ul>
+                {% endfor %}
 
                 <p class="text-dark profile-sub-title text-left mb-5">   
                     Thank you for your trust and support.<br><br>Your contributions, no matter how small, have a huge positive impact.
