chore: remove list styles

--- a/checkout/templates/checkout/checkout.html
+++ b/checkout/templates/checkout/checkout.html
@@ -18,7 +18,7 @@
                 <p class="text-dark mb-1">Which you've chosen to divide as follows:</p>
                 {% for key, value in subscription_breakdown.items %}
                     <ul class="pl-2 mb-1">
-                        <li>
+                        <li class="no-bullets">
                             <strong>£{{ value }}</strong> to {{ key }}
                         </li>
                     </ul>
