add: class to remove list styles

--- a/checkout/static/checkout/css/checkout.css
+++ b/checkout/static/checkout/css/checkout.css
@@ -8,6 +8,10 @@
     line-height: 1.75rem;
 }
 
+.no-bullets {
+    list-style: none;
+}
+
 /* STRIPE */
 .StripeElement {
     box-sizing: border-box;
