--- a/checkout/static/checkout/css/checkout.css
+++ b/checkout/static/checkout/css/checkout.css
@@ -50,6 +50,26 @@
     border: 1px solid #ced4da;
 }
 
+/* LOADING OVERLAY SPINNER FOR PAYMENTS */
+#loading-overlay {
+    display: none;
+    position: fixed;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    background: rgba(205, 37, 118, 0.85);
+    z-index: 9999;
+    }
+    
+    .loading-spinner {
+        display: flex;
+        align-items: center;
+        justify-content: center;
+        margin: 0;
+        height: 100%;
+    }
+
 @media screen and (min-width: 320px) and (max-width: 575px) {
     .checkout-title {
         font-size: 1.5rem;
