--- a/checkout/templates/checkout/billing_success.html
+++ b/checkout/templates/checkout/billing_success.html
@@ -19,7 +19,7 @@
                     Thank you, you awesome human!
                 </h2>
                 <p class="text-dark">Your donation information is below. A confirmation email will be sent to <strong>{{ donation.email }}</strong>.</p>
-                <div class="border-pink p-3 p-lg-5 py-5">
+                <div class="border-pink p-3 p-lg-5 py-5 mb-3">
                     <p class="text-dark"><strong>Donation Number:</strong> {{ donation.donation_number }}</p>
                     <p class="text-dark"><strong>Donation Date:</strong> {{ donation.date }}</p>
                     {% for key, value in donation.donation_breakdown.items %}
