add: aria label to searchbar submit button

--- a/charities/templates/charities/includes/search-filters.html
+++ b/charities/templates/charities/includes/search-filters.html
@@ -3,7 +3,7 @@
         <input type="text" class="form-control search-control" name="q"
             placeholder="Search our charities" aria-label="Search our charities" aria-describedby="basic-addon2">
         <div class="input-group-append">
-            <button class="input-group-text bold btn btn-lg btn-pink" type="submit">
+            <button class="input-group-text bold btn btn-lg btn-pink" type="submit" aria-label="Submit search button">
                 <i class="fas fa-search"></i>
             </button>
         </div>
