--- a/charities/templates/charities/charity_detail.html
+++ b/charities/templates/charities/charity_detail.html
@@ -8,6 +8,7 @@
 {% block extra_title %}{charity-details}{% endblock %}
 
 {% block content %}
+<div class="container-fluid bg-light-brand pb-5">
     <div class="container pt-2 pt-md-5">
         <div class="row">
             <!-- charity general image / swaps to order 2nd on screens >= 992px wide -->
@@ -94,4 +95,5 @@
             {% endif %}
         {% endif %}
     </div>
+</div>
 {% endblock %}
