--- a/checkout/templates/checkout/billing_success.html
+++ b/checkout/templates/checkout/billing_success.html
@@ -8,33 +8,35 @@
 {% block extra_title %}My Profile{% endblock %}
 
 {% block content %}
-<div class="container">
-    <div class="card bg-light-brand p-3 p-lg-4 shadow my-1 my-lg-5">
-        <div class="row">
-            <div class="col-12 col-lg-10 mx-auto">
-                <h1 class="text-pink bold profile-title text-center text-capitalize mt-3 mt-lg-5">
-                    <span><i class="fa-solid fa-circle-check icon-green"></i></span> Donation successful.
-                </h1>
-                <h2 class="text-dark profile-title text-center mb-5">
-                    Thank you, you awesome human!
-                </h2>
-                <p class="text-dark">Your donation information is below. A confirmation email will be sent to <strong>{{ donation.email }}</strong>.</p>
-                <div class="border-pink p-3 p-lg-5 py-5 mb-3">
-                    <p class="text-dark"><strong>Donation Number:</strong> {{ donation.donation_number }}</p>
-                    <p class="text-dark"><strong>Donation Date:</strong> {{ donation.date }}</p>
-                    {% for key, value in donation.donation_breakdown.items %}
-                        <ul class="pl-2 mb-1">
-                            <li class="no-bullets">
-                                <strong>£{{ value }}</strong> to {{ key }}
-                            </li>
-                        </ul>
-                    {% endfor %}
-                    <p class="text-dark"><strong>Donation total: £{{ donation.total }}</strong></p>
-                </div>
+<div class="container-fluid bg-light-brand pb-5">
+    <div class="container">
+        <div class="card bg-light-brand p-3 p-lg-4 shadow my-1 my-lg-5">
+            <div class="row">
+                <div class="col-12 col-lg-10 mx-auto">
+                    <h1 class="text-pink bold profile-title text-center text-capitalize mt-3 mt-lg-5">
+                        <span><i class="fa-solid fa-circle-check icon-green"></i></span> Donation successful.
+                    </h1>
+                    <h2 class="text-dark profile-title text-center mb-5">
+                        Thank you, you awesome human!
+                    </h2>
+                    <p class="text-dark">Your donation information is below. A confirmation email will be sent to <strong>{{ donation.email }}</strong>.</p>
+                    <div class="border-pink p-3 p-lg-5 py-5 mb-3">
+                        <p class="text-dark"><strong>Donation Number:</strong> {{ donation.donation_number }}</p>
+                        <p class="text-dark"><strong>Donation Date:</strong> {{ donation.date }}</p>
+                        {% for key, value in donation.donation_breakdown.items %}
+                            <ul class="pl-2 mb-1">
+                                <li class="no-bullets">
+                                    <strong>£{{ value }}</strong> to {{ key }}
+                                </li>
+                            </ul>
+                        {% endfor %}
+                        <p class="text-dark"><strong>Donation total: £{{ donation.total }}</strong></p>
+                    </div>
 
-                <p class="text-dark profile-sub-title text-left mb-5">   
-                    Thankyou. Your contributions, no matter how small, have a huge positive impact.
-                </p>
+                    <p class="text-dark profile-sub-title text-left mb-5">   
+                        Thankyou. Your contributions, no matter how small, have a huge positive impact.
+                    </p>
+                </div>
             </div>
         </div>
     </div>
