--- a/home/templates/home/index.html
+++ b/home/templates/home/index.html
@@ -7,7 +7,7 @@
 
 {% block content %}
 <!-- hero image and text -->
-<div class="container-fluid p-0 m-0">
+<div class="container-fluid bg-light-brand pb-5 px-0">
     <div class="row p-0 m-0">
         <!-- hero image -->
         <img id="hero-img" class="col-12 d-none d-lg-block" src="{% static '/media/hero-img.png' %}" center no-repeat>
