--- a/templates/404.html
+++ b/templates/404.html
@@ -8,6 +8,7 @@
 {% block extra_title %}404{% endblock %}
 
 {% block content %}
+<div class="container-fluid bg-light-brand pb-5">
     <div class="container">
         <div class="row mb-5">
             <div class="col-12 col-lg-6 mx-auto">
@@ -20,4 +21,5 @@
             </div>
         </div>
     </div>
+</div>
 {% endblock %}
