--- a/profiles/templates/profiles/profile.html
+++ b/profiles/templates/profiles/profile.html
@@ -9,7 +9,8 @@
 {% block extra_title %}My Profile{% endblock %}
 
 {% block content %}
-    <div class="container">
+<div class="container-fluid bg-light-brand pb-5">
+    <div class="container mb-5">
         <div class="row">
             <div class="col-12">
                 <h1 class="text-pink bold profile-title text-capitalize my-3">Donofy Profile Managment: {{ user.username }}</h1>
@@ -39,6 +40,8 @@
             </div>
         </div>
     </div>
+</div>
+    
 {% endblock %}
 
 {% block postloadjs %}
