--- a/templates/base.html
+++ b/templates/base.html
@@ -52,19 +52,19 @@
 			<!-- nav links -->
 			<div class="collapse navbar-collapse justify-content-end" id="navbarNavDropdown">
 			<ul class="navbar-nav">
-				<li class="nav-item">
+				<li class="nav-item px-2">
 				<a href="{% url 'home' %}" aria-label="link to home page"
 					class="nav-link drop-item-h text-pink bold hover-float">Home</a>
 				</li>
-				<li class="nav-item">
+				<li class="nav-item px-2">
 				<a href="{% url 'charities' %}" aria-label="link to charities page"
 					class="nav-link drop-item-h text-pink bold hover-float">Charities</a>
 				</li>
-				<li class="nav-item">
+				<li class="nav-item px-2">
 				<a href="#" aria-label="link to contact us page"
 					class="nav-link drop-item-h text-pink bold hover-float">Contact Us</a>
 				</li>
-				<li class="nav-item dropdown text-pink bold">
+				<li class="nav-item px-2 dropdown text-pink bold">
 				<a href="#" aria-label="my account dropdown menu" id="user-options" aria-expanded="false"
 					class="nav-link drop-item-h text-pink bold hover-float dropdown-toggle" role="button" data-toggle="dropdown">
 					My Account
@@ -130,13 +130,13 @@
 		{% endblock %}
 
 		<footer class="container-fluid m-0 p-0">
-		<div class="row">
-			<div class="col-12 footer-box">
-			<!-- logo svg -->
-			<img class="icon footer-svg" src="{% static 'media/donofy-full-logo-grey.svg' %}" alt="Donofy logo">
-			<p class="text-dark footer-copyright">Copyright Claire Fisher 2024</p>
+			<div class="row">
+				<div class="col-12 footer-box">
+				<!-- logo svg -->
+				<img class="icon footer-svg" src="{% static 'media/donofy-full-logo-grey.svg' %}" alt="Donofy logo">
+				<p class="text-dark footer-copyright">Copyright Claire Fisher 2024</p>
+				</div>
 			</div>
-		</div>
 		</footer>
 
 		{% block postloadjs %}
